# arco

./: CMakeLists.txt  Readme.md  main.cpp
compiler/: CMakeLists.txt
compiler/AST/: CMakeLists.txt  expr.h  expr_nodes.cpp  expr_nodes.h  print_visitor.cpp  print_visitor.h  stmt.h  stmt_nodes.cpp  stmt_nodes.h  type_anno.cpp  type_anno.h  visitor.h
compiler/IR_codegen/: CMakeLists.txt  codegen_visitor.h  expr_codegen.cpp  stmt_codegen.cpp
compiler/driver/: CMakeLists.txt  module.cpp  module.h  source_file.cpp  source_file.h
compiler/errors/: CMakeLists.txt  anno_mismatch_error.h  double_definition_error.h  error_msg.cpp  error_msg.h  module_collector_error.h  syntax_error.h  token_error.h  type_error.h  unknown_id_error.h
compiler/lexer/: CMakeLists.txt  lexer.cpp  lexer.h  location.cpp  location.h  token.cpp  token.h  token_type.cpp  token_type.h
compiler/parser/: CMakeLists.txt  expr_parser.cpp  parser.cpp  parser.h  stmt_parser.cpp
compiler/sema/: CMakeLists.txt  module_collector.cpp  module_collector.h  name_resolution.cpp  name_resolution.h  scope.cpp  scope.h  symbol.cpp  symbol.h
compiler/typing/: CMakeLists.txt  format_specifier.cpp  format_specifier.h  type.cpp  type.h  type_checker.cpp  type_checker.h
examples/: hello.ao
tests/: CMakeLists.txt
tests/lexer/: CMakeLists.txt  lexer_test.cpp
tests/parser/: CMakeLists.txt  parser_test.cpp
